dfir_rs/tests/compile-fail-stable/surface_fold_keyed_badtype_option.stderr
error[E0271]: type mismatch resolving `<Iter<Drain<'_, Option<{integer}>>> as Stream>::Item == (_, _)`
 --> tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:3:9
  |
3 |         source_iter([ Some(5), None, Some(12) ])
  |         ^^^^^^^^^^^ expected `(_, _)`, found `Option<{integer}>`
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                ------------ required by a bound introduced by this call
  |
  = note: expected tuple `(_, _)`
              found enum `std::option::Option<{integer}>`
note: required by a bound in `ReduceKeyedThen::<'a, St, Key, Val, Hasher, AggFn, ThenFn, ThenIter>::new`
 --> src/compiled/pull/reduce_keyed_then.rs
  |
  |     St: Stream<Item = (Key, Val)>,
  |                ^^^^^^^^^^^^^^^^^ required by this bound in `ReduceKeyedThen::<'a, St, Key, Val, Hasher, AggFn, ThenFn, ThenIter>::new`
...
  |     pub fn new(
  |            --- required by a bound in this associated function

error[E0271]: type mismatch resolving `<Iter<Drain<'_, Option<{integer}>>> as Stream>::Item == (_, u32)`
 --> tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:4:16
  |
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^^^ expected `(_, u32)`, found `Option<{integer}>`
  |
  = note: expected tuple `(_, u32)`
              found enum `std::option::Option<{integer}>`
  = note: required for `ReduceKeyedThen<'_, dfir_rs::futures::stream::Iter<std::vec::Drain<'_, std::option::Option<{integer}>>>, _, u32, BuildHasherDefault<FxHasher>, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:4:29: 4:54}, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:4:16: 4:28}, std::collections::hash_map::Drain<'_, _, u32>>` to implement `Stream`
note: required by a bound in `main::{closure#1}::{closure#0}::op_2v1__reduce_keyed__loc_nopath_4_15_4_27`
 --> tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:4:16
  |
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^^^ required by this bound in `op_2v1__reduce_keyed__loc_nopath_4_15_4_27`

error[E0271]: type mismatch resolving `<Iter<Drain<'_, Option<{integer}>>> as Stream>::Item == (_, u32)`
 --> tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:5:16
  |
5 |             -> for_each(std::mem::drop);
  |                ^^^^^^^^ expected `(_, u32)`, found `Option<{integer}>`
  |
  = note: expected tuple `(_, u32)`
              found enum `std::option::Option<{integer}>`
  = note: required for `ReduceKeyedThen<'_, dfir_rs::futures::stream::Iter<std::vec::Drain<'_, std::option::Option<{integer}>>>, _, u32, BuildHasherDefault<FxHasher>, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:4:29: 4:54}, {closure@$DIR/tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:4:16: 4:28}, std::collections::hash_map::Drain<'_, _, u32>>` to implement `Stream`
note: required by a bound in `main::{closure#1}::{closure#0}::op_2v1__reduce_keyed__loc_nopath_4_15_4_27`
 --> tests/compile-fail-stable/surface_fold_keyed_badtype_option.rs:4:16
  |
4 |             -> reduce_keyed(|old: &mut u32, val: u32| { *old += val; })
  |                ^^^^^^^^^^^^ required by this bound in `op_2v1__reduce_keyed__loc_nopath_4_15_4_27`
